# grpc-proto-pyproject

./: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
gptest/client/: client.py  module.py
gptest/proto/: message.proto  message_pb2_grpc.py
gptest/server/: service.py
pt/client/: __main__.py
