[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pt"
version = "0.1.0"
authors = [
  {name = "Chris", email = "ck@gmail.com"},
]
description = "A package that meows"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = ["click"]

[tool]
[tool.setuptools]
packages = ["pt.client", "pt.server"]
